--- a/composer.json
+++ b/composer.json
@@ -59,8 +59,12 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
-        }
+        },
+        "platform": {
+        "php": "8.1.25"
+    }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+    
 }
